@@ -1,6 +1,7 @@
 Version 3.0.6 (2008-03-xx)
 	Added elements to the default value of valid_elements option. It now contains all XHTML strict elements and a few transitional.
 	Added more accessibility fixes, it's now possible to navigate and close list boxes and split button menus with the keyboard.
+	Added missing getInfo method to the contextmenu and safari plugin, this caused problems for the Drupal module.
 	Fixed bug where attribute rules for the DOM Serializer couldn't contain - or _ characters in their names.
 	Fixed bug where inlinepopups event blocker and modal dialog blocker elements produced vertical scrollbars.
 	Fixed bug where there was a rendering issue with quirks mode in Safari moving the resize handle to an incorrect position.
